# test_stripe

./: .dockerignore  .env  .env_example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt  start.sh
app_stripe/: admin.py  apps.py  models.py  urls.py  views.py
app_stripe/migrations/: 0002_alter_item_name.py  0003_currency_item_currency.py  0004_currency_value.py  0005_alter_currency_options_alter_currency_value_and_more.py  0006_order_orderitem.py  0007_order_currency.py  0008_alter_order_currency.py  0009_remove_order_currency_alter_item_description.py  0010_discount_tax_order_discount_order_tax.py  0011_remove_discount_code_remove_tax_name.py  0012_alter_discount_percent.py  0013_alter_tax_options.py
app_stripe/templates/: item_detail.html  order_detail.html
project/: requirements.txt  settings.py  start.sh  urls.py  wsgi.py
project/project/: settings.py
project/stripe/migrations/: 0001_initial.py
stripe/: admin.py  apps.py  models.py  urls.py  views.py
stripe/templates/: item_detail.html
